# GameTable

./: .dockerignore  .gitignore  API.md  DELIVERY.md  DESIGN_COMPLIANCE.md  DEVELOPER.md  Dockerfile  INDEX.md  LAUNCH_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFERENCE.md  SAMPLECARD.json  SETUP.md  TESTING.md  build.sh  docker-compose.yml  start.sh
GameTableData/General/: setcodes.txt
backend/: Cargo.toml
backend/migrations/: 001_init.sql  002_cards.sql
backend/src/: game.rs  handlers.rs  main.rs  scryfall.rs  upload.rs  users.rs  websocket.rs  websocket_new.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: BattlefieldZone.js  BottomToolbar.js  CollapsibleZones.js  CommandZone.js  DiceAndCoins.js  ExileZone.js  FourPlayerLifeTracker.js  GameTable.js  GraveyardZone.js  HandZone.js  LeftSidebar.js  LibraryZone.js  Lobby.js  Login.js  MulliganScreen.js  PlayerProfile.js  PlayerZone.js  RevealCardOverlay.js  ScryCountSelector.js  ScryInterface.js  SpawnCardModal.js  SurveilInterface.js  ZoneViewerModal.js  ZonesPanel.js
frontend/src/styles/: BattlefieldZone.css  BottomToolbar.css  CollapsibleZones.css  CommandZone.css  CommanderLayout.css  DiceAndCoins.css  ExileZone.css  FourPlayerLifeTracker.css  GameTable.css  GameTableNew.css  GraveyardZone.css  HandZone.css  LeftSidebar.css  LibraryZone.css  Lobby.css  Login.css  MulliganScreen.css  PlayerProfile.css  PlayerZone.css  RevealCardOverlay.css  ScryCountSelector.css  ScryInterface.css  SpawnCardModal.css  SurveilInterface.css  (+3 more)
